@@ -1,5 +1,5 @@
 /////////////////////////////////////////////////////////////////////////
-// $Id: cpuid.cc,v 1.49 2007/10/01 19:59:36 sshwarts Exp $
+// $Id: cpuid.cc,v 1.50 2007/10/01 21:08:26 sshwarts Exp $
 /////////////////////////////////////////////////////////////////////////
 //
 //  Copyright (C) 2001  MandrakeSoft S.A.
@@ -157,7 +157,11 @@ Bit32u BX_CPU_C::get_extended_cpuid_features()
 #endif
 
 #if BX_SUPPORT_SSE >= 4
-  features |= (1<<19);  // support SSE4
+  features |= (1<<19);  // support SSE4.1
+#endif
+
+#if (BX_SUPPORT_SSE >= 5) || (BX_SUPPORT_SSE >= 4 && BX_SUPPORT_SSE_EXTENSION > 0)
+  features |= (1<<20);  // support SSE4.2 (SSE4E)
 #endif
 
 #if BX_SUPPORT_POPCNT || (BX_SUPPORT_SSE >= 5) || (BX_SUPPORT_SSE >= 4 && BX_SUPPORT_SSE_EXTENSION > 0)
